...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RemindersActivity">

    <Button
        android:id="@+id/reminders_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:onClick="toMainActivity"
        android:text="@string/home_button"
...
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/reminders_table"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:stretchColumns="*"></TableLayout>
            </LinearLayout>
        </HorizontalScrollView>

...
        android:layout_marginTop="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/reminders_scrollview"
        tools:layout_editor_absoluteX="1dp" />

    <Button
        android:id="@+id/reminders_add_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="5dp"
        android:onClick="toAddReminderActivity"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminders_scrollview" />

    <Button
        android:id="@+id/reminders_edit_button"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:onClick="toEditReminderActivity"
        android:text="@string/edit"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reminders_delete_button"
        app:layout_constraintStart_toEndOf="@+id/reminders_add_button"
        app:layout_constraintTop_toBottomOf="@+id/reminders_scrollview" />

    <Button
        android:id="@+id/reminders_delete_button"
        android:layout_width="90dp"
...
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/reminders_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminders_scrollview" />

    <Button
        android:id="@+id/reminders_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:onClick="openViewDialog"
        android:text="@string/view"
...
